--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -21,7 +21,7 @@
                 {{#sessionUser}}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">계좌목록</a>
+                        <a class="nav-link" href="/account">계좌목록</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/account/save-form">계좌생성</a>
