--- a/src/main/resources/templates/account/list.mustache
+++ b/src/main/resources/templates/account/list.mustache
@@ -13,7 +13,7 @@
 
         {{#models}}
             <tr>
-                <td>{{number}}</td>
+                <td><a href="/account/{{number}}">{{number}}</a></td>
                 <td>{{balance}}원</td>
             </tr>
         {{/models}}
